fix: remove minimal gap between pseudo elements on certain device widths

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ body {
 .btn:hover::after,
 .btn:focus::before,
 .btn:focus::after {
-  width: 50%;
+  width: 52%;
 }
 
 .btn:link,
